--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<!-- <nav class="flex justify-center shadow items-center h-20 bg-white">
+<nav class="flex justify-center shadow items-center h-20 bg-white">
   <div class="flex space-x-5 w-full sm:w-4/5 ">
     <div class="hover:underline">
       <a class="text-xl" routerLink="/top-artists">Top Artists</a>
@@ -7,6 +7,4 @@
       <a class="text-xl" routerLink="/top-tracks">Top Tracks</a>
     </div>
   </div>
-</nav> -->
-
-  <router-outlet></router-outlet>
+</nav>
