--- a/src/app/components/track-features-tab/track-features-tab.component.html
+++ b/src/app/components/track-features-tab/track-features-tab.component.html
@@ -1,1 +1,8 @@
-<p-chart type="radar" [data]="data"></p-chart>
+<div style="display: block;">
+  <canvas baseChart
+    [datasets]="radarChartData"
+    [options]="radarChartOptions"
+    [labels]="radarChartLabels"
+    [chartType]="radarChartType">
+  </canvas>
+</div>
