Added simple navbar logo

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,8 @@
 <nav class="flex justify-center shadow items-center h-20 bg-white">
-  <div class="flex space-x-5 w-full sm:w-4/5 ">
+  <div class="flex space-x-5 w-full sm:w-4/5 h-full items-center">
+    <div class="h-full">
+      <img class="object-contain h-full" src="assets/Logo.png" alt="Relive Spotify Logo">
+    </div>
     <div class="hover:underline">
       <a class="text-xl" routerLink="/top-artists">Top Artists</a>
     </div>
