--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,13 +1,21 @@
 <nav class="flex justify-center shadow items-center h-20 bg-white">
-  <div class="flex space-x-5 w-full sm:w-4/5 h-full items-center">
-    <div class="h-full">
-      <img class="object-contain h-full" src="assets/Logo.png" alt="Relive Spotify Logo">
+  <div class="flex w-full sm:w-4/5 h-full items-center justify-between">
+    <div class="flex space-x-5 h-full items-center">
+      <div class="h-full">
+        <img class="object-contain h-full" src="assets/Logo.png" alt="Relive Spotify Logo">
+      </div>
+      <div class="hover:underline">
+        <a class="text-xl" routerLink="/top-artists">Top Artists</a>
+      </div>
+      <div class="hover:underline">
+        <a class="text-xl" routerLink="/top-tracks">Top Tracks</a>
+      </div>
     </div>
-    <div class="hover:underline">
-      <a class="text-xl" routerLink="/top-artists">Top Artists</a>
-    </div>
-    <div class="hover:underline">
-      <a class="text-xl" routerLink="/top-tracks">Top Tracks</a>
+    
+
+    <div class="ml-auto hover:underline">
+      <a class="text-xl" routerLink="/login" (click)="logout()">Logout</a>
     </div>
   </div>
+  
 </nav>
